# pytest-perf

./: CHANGES.rst  NEWS.rst  README.rst  conftest.py  exercises.ini  exercises.py  mypy.ini  pyproject.toml  setup.cfg  tox.ini
docs/: index.rst
newsfragments/: +5ab4691c.bugfix.rst  +71a89c77.feature.rst  12.feature.rst  15.feature.rst  16.feature.rst  18.feature.rst  20.bugfix.rst  6.bugfix.rst
pytest_perf/: deco.py  plugin.py  runner.py
tests/: pypi_helpers.py  test_plugin.py  test_runner.py
