[metadata]
name = pytest-perf
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Run performance tests against the mainline code.
long_description = file:README.rst
url = https://github.com/jaraco/pytest-perf
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	pip-run>=8.5
	tempora>=4.1
	jaraco.functools
	more_itertools
	jaraco.context
	packaging

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.3
	pytest-ruff

	# local

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
pytest11 =
	perf = pytest_perf.plugin
